# almoxarifado

./: CMakeLists.txt
almoxarifado.core/: CMakeLists.txt  LinkedList.c
almoxarifado.core.tests/: CMakeLists.txt  LinkedListTests.cpp
almoxarifado.core/include/almoxarifado.core/: LinkedList.h
libs/gtest/: googletest-download.cmake  googletest.cmake
